# bmstu_3sem_oop

./: .gitignore  README.md
lab2/: .clang-format  CMakeLists.txt
lab2/include/mylist/: _exceptions.hpp  _iterators.hpp  _node.hpp  list.hpp
lab2/src/: main.cpp
lab2/tests/: list.test.cpp
